--- a/package.json
+++ b/package.json
@@ -11,26 +11,26 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.0.1",
-    "body-parser": "^1.19.0",
-    "connect-redis": "^3.4.1",
-    "express": "^4.17.0",
-    "express-handlebars": "^3.1.0",
-    "express-session": "^1.16.1",
+    "body-parser": "~1.19.0",
+    "connect-redis": "~3.4.1",
+    "express": "~4.17.0",
+    "express-handlebars": "~3.1.0",
+    "express-session": "~1.16.1",
     "install": "^0.12.2",
     "morgan": "^1.9.1",
-    "msnodesqlv8": "^0.7.2",
-    "mssql": "^5.1.0",
-    "mssql-plus": "^1.1.0",
-    "mysql": "^2.17.1",
+    "msnodesqlv8": "~0.7.2",
+    "mssql": "~5.1.0",
+    "mssql-plus": "~1.1.0",
+    "mysql": "~2.17.1",
     "node-schedule": "^1.3.2",
     "nodemon": "^1.19.0",
-    "normalize-port": "^1.0.0",
-    "npm": "^6.9.0",
-    "redis": "^2.8.0",
-    "redis-server": "^1.2.2",
-    "response-time": "^2.3.2",
-    "restful-stored-procedure": "^0.7.0",
-    "router": "^1.3.3",
-    "tedious": "^6.1.1"
+    "normalize-port": "~1.0.0",
+    "npm": "~6.9.0",
+    "redis": "~2.8.0",
+    "redis-server": "~1.2.2",
+    "response-time": "~2.3.2",
+    "restful-stored-procedure": "~0.7.0",
+    "router": "~1.3.3",
+    "tedious": "~6.1.1"
   }
 }
