--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "dependencies": {
     "async": "^3.0.1",
     "body-parser": "~1.19.0",
+    "case-insensitive": "^1.0.0",
     "connect-redis": "~3.4.1",
     "express": "~4.17.0",
     "express-handlebars": "~3.1.0",
     "express-session": "~1.16.1",
+    "ignore-case": "^0.1.0",
     "install": "^0.12.2",
+    "lower-case": "^1.1.4",
     "morgan": "^1.9.1",
     "msnodesqlv8": "~0.7.2",
     "mssql": "~5.1.0",
