--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "~1.16.1",
     "ignore-case": "^0.1.0",
     "install": "^0.12.2",
+    "lodash": "^4.17.15",
     "lower-case": "^1.1.4",
     "morgan": "^1.9.1",
     "msnodesqlv8": "~0.7.2",
