--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "~4.17.0",
     "express-handlebars": "~3.1.0",
     "express-session": "~1.16.1",
+    "fs": "0.0.1-security",
     "ignore-case": "^0.1.0",
     "install": "^0.12.2",
     "lodash": "^4.17.15",
@@ -35,6 +36,7 @@
     "response-time": "~2.3.2",
     "restful-stored-procedure": "~0.7.0",
     "router": "~1.3.3",
+    "simple-node-logger": "^18.12.23",
     "tedious": "~6.1.1"
   }
 }
